# apgame

./: CMakeLists.txt
docker/: CMakeLists.txt
docker/archlinux-basic/: Dockerfile
docker/archlinux-build/: Dockerfile
example/: CMakeLists.txt  client.cpp  server.cpp
include/apgame/core/: client.hpp  client_option.hpp  client_socket.hpp  condition_variable.hpp  context.hpp  logging.hpp  server.hpp  server_option.hpp  server_socket.hpp  socket.hpp  thread.hpp
include/apgame/game/: EntryPoint.hpp  Game.hpp  GameAPI.hpp  GameBuilder.hpp  GameClient.hpp  GameContext.hpp  GameManager.hpp  Room.hpp  RoomClient.hpp  RoomCommand.hpp  RoomManager.hpp  RoomServer.hpp  User.hpp  UserClient.hpp  UserCommand.hpp  UserManager.hpp  UserServer.hpp  enum.hpp  game.hpp  game_api.hpp  game_client.hpp  game_enum.hpp  game_manager.hpp  game_player.hpp  gameid.hpp  reversi.hpp  reversi_api.hpp  reversi_client.hpp  reversi_enum.hpp  reversi_player.hpp
include/apgame/myai/: PrimitiveMontecarloReversiPlayer.hpp
include/apgame/reversi/: Reversi.hpp  ReversiClient.hpp  ReversiContext.hpp  ReversiPlayer.hpp  enum.hpp  reversi_api.hpp  reversi_client.hpp  reversi_player.hpp
include/apgame/socket/: Acceptor.hpp  ConditionalVariable.hpp  Lock.hpp  Socket.hpp  SocketClient.hpp  SocketClientOption.hpp  SocketContext.hpp  SocketServer.hpp  SocketServerOption.hpp
include/lh-ai/: ai.hpp  evaluator.hpp  gamebasics.hpp  gameboard.hpp
lh-ai/: CMakeLists.txt  ai.cpp  gameboard.cpp
python/apgame/: __init__.py  agent.py  game.config  game.py  game_agent.py  game_manager.py  reversi.py  socket.py  user_client.py
src/: CMakeLists.txt  apgame-client.cpp  apgame-server.cpp  client-human.cpp  client.cpp  client_human.cpp  player_runner.cpp  reversi-player.cpp  server.cpp  test-client.cpp
